# demo_xmake

./: .gitignore  README.md
dynamic_library_with_cmakelists/: xmake.lua
dynamic_library_with_cmakelists/foo/: CMakeLists.txt
hello/: xmake.lua
vcpck_static/: test.yaml  xmake.lua
vcpck_static/src/: main.cpp
